src/features/user_profile/components/LoginForm/LoginForm.module.css
.modalContainer {
  z-index: var(--modal);
}
.modalCard {
  box-shadow: none !important;
}

.loginDescription {
  margin-top: 20px;
}

.socialLoginContainer {
  display: flex;
  gap: 12px;
  margin-top: 24px;
}

.socialButton {
  box-shadow: none !important;
  border-radius: 4px;
  border: 1px solid #a4d1eb;
  font-family: 'Roboto', Arial, Helvetica, sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  color: var(--accent-strong);
  padding: 12px 16px;

  &:hover {
    background-color: var(--accent-weak);
  }

  &:active {
    background-color: var(--faint-weak-down) !important;
  }
}

.useEmailLabelContainer {
  display: flex;
  justify-content: center;
  position: relative;
  margin-top: 18px;
}

.useEmailLabelContainer::after {
  content: '';
  border-top: 1px solid #d7dadc;
  position: absolute;
  width: 100%;
  margin-top: 12px;
}

.useEmailLabel {
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #8c949b;
  background: var(--base-weak);
  padding: 0 16px;
  z-index: 1;
}

.inputsContainer {
  margin-top: var(--double-unit);
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.authInput:-webkit-autofill {
  -webkit-background-clip: text;
}

.link {
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 18px;
  color: var(--accent-strong);
  cursor: pointer;

  & a {
    text-decoration: none;
    color: var(--accent-strong);
  }
  & a:hover {
    text-decoration: underline;
  }
}

.forgotPasswordContainer {
  margin-top: var(--unit);
}

.registerContainter {
  margin: var(--double-unit) auto 0 auto;
}

.loginButtonContainer {
  margin-top: var(--double-unit);
}

.loginButton {
  width: 100%;
}

.loadingContainer {
  position: absolute;
  background: rgba(255, 255, 255, 0.7);
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}

.errorMessageContainer {
  margin-top: 16px;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 22px;
  display: flex;
  justify-content: center;
  color: var(--error-strong);
}

